--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odpočet do dalších prázdnin</title>
+    <title>Odpočet do prázdnin</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Odpočet do dalších prázdnin (2024/25)</h2>
+    <h2>Odpočet do prázdnin (2024/25)</h2>
     <div class="mainTitle">Podzimní prázdniny 2024</div>
     <div class="about">29.10.2024 - 30.10.2024</div>
     <div class="countdown">
